feat: add Auth feature
